GNOME Bugzilla – Bug 750348
dtlsdec: 'Got data flow before stream-start event' warnings
Last modified: 2015-06-03 15:13:09 UTC
Created attachment 304527 [details] [review] fix 'Got data flow before stream-start event' warnings This warning is caused when requesting data_src pads on dtlssrtpdecoder. Forwarding sticky events on the src pad fixes this issue.
commit f530aac11515194fe069e49337caa2953497457a Author: Santiago Carot-Nemesio <sancane@gmail.com> Date: Wed Jun 3 16:59:44 2015 +0200 dtlsdec: Fix critical warning "got data flow before stream-start event" Forward sticky events on requested src pad. https://bugzilla.gnome.org/show_bug.cgi?id=750348